<resources>
    <string name="app_name">Carboola</string>
    <string name="help">Help</string>
    <string name="system_log">System log</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="logout">Logout</string>
    <string name="active">Active</string>
    <string name="all">All</string>
    <string name="passworld">Passworld</string>
    <string name="username">Username</string>
    <string name="t_mobile_hackaton">T-Mobile Hackaton</string>
    <string name="mojio_app">MOJIO APP</string>

    <string name="my_garage">My garage</string>
    <string name="car_configuration">Car configuration</string>
    <string name="car_state">Car state</string>
    <string name="ride">Ride</string>
    <string name="users">User settings</string>
    <string name="playing_spotify">Playing Spotify</string>

    <string name="avg_speed_label">avg speed</string>
    <string name="erros_label">erros</string>
    <string name="l_fuel_label">l fuel</string>
    <string name="bad_oil_state">Bad oil state</string>
    <string name="nearest_service">Nearest service</string>
    <string name="nearest_station">Nearest station</string>
    <string name="estimated_drive">Estimated drive:</string>
    <string name="consumption">Consumption:</string>
    <string name="effective_refueling">Effective refueling:</string>
    <string name="travel_cost">Travel cost:</string>
    <string name="car_name">Name:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="owners">Owners:</string>
    <string name="notifications">Notifications:</string>
    <string name="night_mode">Night mode:</string>
    <string name="notifications_during_the_ride">Notifications during the ride:</string>
    <string name="share_hotspot">Share hotspot:</string>
    <string name="gpsLabel">GPS:</string>
    <string name="manufac_year">manufac. year</string>
    <string name="mileage">mileage</string>
    <string name="owners_count">owners</string>
    <string name="two">2</string>
    <string name="check_safe_distance">Check safe distance</string>
    <string name="twisto_payments">Twisto payments</string>
    <string name="share_wi_fi">Share Wi-fi</string>
    <string name="spotify">Spotify</string>
    <string name="share_ride">Share ride</string>
</resources>
