<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/mToolbarUsers"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/mCardInfo"
        android:layout_width="match_parent"
        android:layout_below="@id/mToolbarUsers"
        android:layout_margin="26dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:layout_heightPercent="43%"

        >

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mCarImage"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                app:layout_heightPercent="80%"
                />

            <TextView
                android:id="@+id/mYear"
                android:layout_below="@+id/mCarImage"
                android:gravity="center_horizontal|bottom"
                android:text="2016"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <TextView
                android:id="@+id/mYearLabel"
                android:layout_below="@+id/mYear"
                android:gravity="center_horizontal|top"
                android:text="@string/manufac_year"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/mCarImage"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/mYear"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/mMileage"
                android:layout_below="@+id/mCarImage"
                android:layout_toEndOf="@+id/separator"
                android:gravity="center_horizontal|bottom"
                android:text="18301.0"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <TextView
                android:id="@+id/mMileageLabel"
                android:layout_below="@+id/mMileage"
                android:layout_toEndOf="@+id/separator"
                android:gravity="center_horizontal|top"
                android:text="@string/mileage"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <View
                android:id="@+id/separator1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/mCarImage"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/mMileage"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/mOwnersCount"
                android:layout_below="@+id/mCarImage"
                android:layout_toEndOf="@+id/separator1"
                android:gravity="center_horizontal|bottom"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <TextView
                android:id="@+id/mOwnersCountLabel"
                android:layout_width="match_parent"
                android:layout_below="@+id/mMileage"
                android:layout_toEndOf="@+id/separator1"
                android:gravity="center_horizontal|top"
                android:text="@string/owners_count"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                />
        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/twistoPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mCardInfo"
        android:layout_margin="26dp"
        android:text="@string/twisto_payments"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/twistoPayments"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mCardInfo"
        android:layout_margin="26dp"
        android:layout_toEndOf="@+id/twistoPayments"

        />

    <TextView
        android:id="@+id/shareWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twistoPayments"
        android:layout_margin="26dp"
        android:text="@string/share_wi_fi"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/shareWifi"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mSwitch"
        android:layout_margin="26dp"
        android:layout_toEndOf="@+id/twistoPayments"
        android:checked="true"

        />

    <TextView
        android:id="@+id/spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareWifi"
        android:layout_margin="26dp"
        android:text="@string/spotify"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mSpotifySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spotify"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mWifi"
        android:layout_margin="26dp"
        android:layout_toEndOf="@+id/twistoPayments"
        android:checked="true"


        />

    <TextView
        android:id="@+id/shareRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spotify"
        android:layout_margin="26dp"
        android:text="@string/share_ride"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/shareRide"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mSpotifySwitch"
        android:layout_margin="26dp"
        android:layout_toEndOf="@+id/twistoPayments"
        android:checked="true"

        />

</android.support.percent.PercentRelativeLayout>