<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mCarSelectItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <TextView
        android:id="@+id/mCarName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        tools:text="sadawdas"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/mCardInfo"
        android:layout_width="match_parent"
        android:layout_below="@+id/mCarName"
        android:layout_margin="26dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:layout_heightPercent="43%"

        >

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mCarImage"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                app:layout_heightPercent="80%"
                />

            <TextView
                android:id="@+id/mYear"
                android:layout_below="@+id/mCarImage"
                android:gravity="center_horizontal|bottom"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                tools:text="23 km/h"
                />

            <TextView
                android:id="@+id/mYearLabel"
                android:layout_below="@+id/mYear"
                android:gravity="center_horizontal|top"
                android:text="@string/manufac_year"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/mCarImage"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/mYear"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/mMileage"
                android:layout_below="@+id/mCarImage"
                android:layout_toEndOf="@+id/separator"
                android:gravity="center_horizontal|bottom"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                tools:text="23"
                />

            <TextView
                android:id="@+id/mMileageLabel"
                android:layout_below="@+id/mMileage"
                android:layout_toEndOf="@+id/separator"
                android:gravity="center_horizontal|top"
                android:text="@string/mileage"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <View
                android:id="@+id/separator1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/mCarImage"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/mMileage"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/mOwnersCount"
                android:layout_below="@+id/mCarImage"
                android:layout_toEndOf="@+id/separator1"
                android:gravity="center_horizontal|bottom"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_heightPercent="10%"
                app:layout_widthPercent="33%"
                />

            <TextView
                android:id="@+id/mOwnersCountLabel"
                android:layout_width="match_parent"
                android:layout_below="@+id/mMileage"
                android:layout_toEndOf="@+id/separator1"
                android:gravity="center_horizontal|top"
                android:text="@string/owners_count"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_heightPercent="10%"
                />
        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.percent.PercentRelativeLayout>